[package]
name = "adequate"
description = """\
A yet another validation library provides a macro inspired by \
Accord.\
"""
version = "0.1.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"
homepage = "https://gitlab.com/grauwoelfchen/adequate"
readme = "README.md"
keywords = ["validation"]
categories = ["web-programming"]
documentation = "https://docs.rs/crate/adequate"
repository = "https://gitlab.com/grauwoelfchen/adequate"
license = "Apache-2.0"

exclude = [
  ".cargo-huskey/*",
  "Makefile",
  "/.env",
  "/.env.ci.sample",
  "/.clippy.toml",
  "/.rustfmt.toml",
]

[dependencies]
lazy_static = "1.4"
strfmt = "0.1.6"

[badges]
gitlab = { repository = "grauwoelfchen/adequate", branch = "trunk" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
